# OpenThread-Sensor-Demo

./: README.md
client/: CMakeLists.txt  prj.conf  sample.yaml
client/client-decomposition/: prj.conf
client/client-decomposition/boards/: nrf52840dk_nrf52840.overlay
client/client-decomposition/src/: coap_client.h  crypto.h
client/src/: coap_client.c  crypto.c  crypto.h  main.c  sensor.c  sensor.h
server/: CMakeLists.txt  prj.conf  sample.yaml
server/boards/: nrf52840dk_nrf52840.overlay
server/server-decomposition/: prj.conf
server/src/: button.c  button.h  coap.c  coap.h  crypto.c  crypto.h  json.c  json.h  led.c  led.h  main.c
